--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "http://scierke.github.io/bd2-work",
+    "homepage": ".",
     "name": "web-school",
     "version": "0.1.0",
     "private": true,
